@startuml

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity hotels {
  uuid : uuid
  --
  name : varchar(50)
  country : varchar(30)
  city : varchar(40)
  address : varchar(60)
}

entity room_booking {
  uuid : uuid
  --
  from_date : date
  to_date : date
  canceled : boolean
  created_at : timestamp
  updated_at : timestamp
  user_uuid : uuid <<FK>>
  room_uuid : uuid <<FK>>
}

entity rooms {
  uuid : uuid
  --
  room_type : varchar(30)
  price : real
  number_guests : smallint
  available : boolean
  deleted : boolean
  created_at : timestamp
  updated_at : timestamp
  hotel_uuid : uuid <<FK>>
}

entity users {
  uuid : uuid
  --
  full_name : varchar(50)
  email : varchar(60) <<UNIQUE>>
  password : varchar(60)
  role : varchar(20)
  deleted : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity flights {
  uuid : uuid
  --
  airlane_name : varchar(20)
  from_location : varchar(60)
  to_location : varchar(60)
  departure_time : timestamp
  arrival_time : timestamp
  total_seats : integer
  price : real
  canceled : boolean
  created_at : timestamp
  updated_at : timestamp
}

entity flight_booking {
  uuid : uuid
  --
  number_seats : smallint
  canceled : boolean
  created_at : timestamp
  updated_at : timestamp
  flight_uuid : uuid <<FK>>
  user_uuid : uuid <<FK>>
}

hotels ||..|{ rooms
users ||..|{ room_booking
rooms ||..|{ room_booking

users ||..|{ flight_booking
flights ||..|{ flight_booking

@enduml

